# solbot4

./: .dockerignore  .gitignore  docker-compose.yml  requirements.txt  run_move_seq_nav.sh  run_move_seq_pausable.sh  run_nav2_extended.sh  run_nav2_sim.sh  run_one_line.sh  run_one_line_actions.sh  run_swath_nav.sh
.github/workflows/: build.yml
docker/: Dockerfile.dev  ros_entrypoint.sh
docs/: one_line_actions_nodes.dot  one_line_actions_nodes.md
embedded/drv8871_controler/: platformio.ini
embedded/drv8871_controler/src/: Drv8871.cpp  Drv8871.h  main.cpp
embedded/odrive_servo_claude/: MQTT_SUMMARY.md  dump_odrive_config.py  hall_sensor_diag.py  odrive_config_hoverboard.py  odrive_encoder_diag.py  odrvA.json  odrvB.json  platformio.ini  run10sdrive.txt  run_motor.py
embedded/odrive_servo_claude/src/: Wservo.cpp  Wservo.h  main.cpp
src/behavior/actions/approach_swath_action/: CMakeLists.txt  package.xml
src/behavior/actions/approach_swath_action/include/approach_swath_action/: approach_swath_action_server.hpp
src/behavior/actions/approach_swath_action/src/: approach_swath_action_server.cpp  main.cpp
src/behavior/actions/run_swath_action/: CMakeLists.txt  package.xml
src/behavior/actions/run_swath_action/include/run_swath_action/: run_swath_action_server.hpp
src/behavior/actions/run_swath_action/src/: main.cpp  run_swath_action_server.cpp
src/behavior/bt_plugins/convert_geo_points_bt_node/: CMakeLists.txt  package.xml
src/behavior/bt_plugins/get_pose_from_poses_bt_node/: CMakeLists.txt  package.xml
src/behavior/bt_plugins/get_pose_from_poses_bt_node/src/: get_pose_from_poses.cpp
src/behavior/bt_plugins/move_seq_nav/: CMakeLists.txt
src/behavior/bt_plugins/move_seq_nav/behavior_trees/: move_seq_pausable.xml
src/behavior/bt_plugins/move_seq_nav/include/move_seq_nav/: move_seq_navigator.hpp  move_sequence_action.hpp  pause_condition.hpp
src/behavior/bt_plugins/move_seq_nav/src/: move_seq_navigator.cpp  move_sequence_action.cpp  pause_condition.cpp
src/behavior/bt_plugins/navigator_action_bt_nodes/: CMakeLists.txt  package.xml
src/behavior/bt_plugins/navigator_action_bt_nodes/include/navigator_action_bt_nodes/: approach_swath_action.hpp  run_swath_action.hpp
src/behavior/bt_plugins/navigator_action_bt_nodes/src/: approach_swath_action.cpp  get_geo_point_from_vector.cpp  reverse_geo_points.cpp  run_swath_action.cpp
src/behavior/bt_plugins/one_line_progress_bt_nodes/: CMakeLists.txt  package.xml
src/behavior/bt_plugins/one_line_progress_bt_nodes/src/: check_stage.cpp  clear_one_line_progress.cpp  load_one_line_progress.cpp  save_one_line_progress.cpp  set_stage.cpp
src/behavior/bt_plugins/pause_bt_nodes/: CMakeLists.txt  package.xml
src/behavior/bt_plugins/pause_bt_nodes/include/pause_bt_nodes/: pause_condition.hpp
src/behavior/bt_plugins/pause_bt_nodes/src/: pause_condition.cpp
src/behavior/bt_plugins/publish_path_bt_node/: CMakeLists.txt  package.xml
src/behavior/bt_plugins/publish_path_bt_node/src/: publish_path.cpp
src/behavior/bt_plugins/reverse_path_bt_node/: CMakeLists.txt  package.xml
src/behavior/bt_plugins/reverse_path_bt_node/src/: reverse_path.cpp  reverse_poses.cpp
src/behavior/move_behavior/: CMakeLists.txt  behavior_plugin.xml  package.xml
src/behavior/move_sequence_behavior/: CMakeLists.txt  package.xml
src/behavior/move_sequences/: example_sequence.json
src/behavior/navigators/one_line_nav/: CMakeLists.txt  navigator_plugins.xml  package.xml
src/behavior/navigators/one_line_nav/behavior_trees/: one_line.xml  one_line_actions.xml  one_line_pausable.xml
src/behavior/navigators/one_line_nav/behavior_trees/subtrees/: approach_swath.xml  swath_nav.xml
src/behavior/navigators/one_line_nav/src/: one_line_navigator.cpp
src/behavior/navigators/swath_nav/: CMakeLists.txt  navigator_plugins.xml  package.xml
src/behavior/navigators/swath_nav/behavior_trees/: swath_nav.xml
src/behavior/navigators/swath_nav/include/swath_nav/: swath_navigator.hpp
src/behavior/navigators/swath_nav/src/: swath_navigator.cpp
src/control/solbot_control/: package.xml  setup.cfg  setup.py
src/description/: CMakeLists.txt  package.xml
src/description/launch/: robot_description.launch.py
src/description/rviz/: config.rviz
src/description/urdf/: limo_xacro.xacro  solbot3_steering_hinge.xacro  solbot4_description.urdf
src/fields/: move_seq_progress.json
src/msgs/: CMakeLists.txt  package.xml
src/msgs/action/: Move.action  MoveSequence.action  RunApproachSwath.action  RunMoveSequenceLoop.action  RunOneLine.action  RunSwath.action
src/msgs/msg/: MoveSegment.msg  Pause.msg
src/navigation/controller/: CMakeLists.txt  controller_plugin.xml  package.xml
src/navigation/controller/include/gps_line_follower_controller/: gps_line_follower_controller.hpp
src/navigation/controller/src/: gps_line_follower_controller.cpp
src/navigation/localization/: CMakeLists.txt  package.xml
src/navigation/localization/config/: ekf_gps_imu_params.yaml
src/navigation/localization/launch/: ekf_gps_imu.launch.py
src/navigation/nav2_bringup/: CMakeLists.txt  package.xml
src/navigation/nav2_bringup/config/: gps_fix_tf_fix.rviz  mapviz.mvc  nav2.rviz
src/navigation/nav2_bringup/launch/: navigation.launch.py
src/navigation/nav2_bringup/params/: nav2_params.yaml  nav2_params_basic.yaml  nav2_params_extended.yaml  nav2_params_move_seq.yaml  nav2_params_move_seq_pausable.yaml  nav2_params_one_line.yaml  nav2_params_one_line_actions.yaml  nav2_params_swath.yaml
src/navigation/nav2_bringup/scripts/: origin_publisher.py
src/simulation/gazebo_spawn/: CMakeLists.txt  package.xml
src/simulation/gazebo_spawn/configs/: solbot4_gz_bridge.yaml
src/simulation/gazebo_spawn/launch/: simulation.launch.py  spawn_robot.launch.py
src/simulation/gazebo_spawn/scripts/: ackermann_cmd_vel_preprocessor.py  imu_covariance_injector.py  odom_covariance_injector.py
src/simulation/gazebo_spawn/worlds/: empty.sdf
src/simulation/nav2_sim/: CMakeLists.txt  package.xml
src/simulation/nav2_sim/launch/: nav2_simulation.launch.py
(+37 files in other folders)
