<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solbot4_nav2_sim</name>
  <version>0.0.1</version>
  <description>Nav2 simulation package for solbot4 - combines Gazebo, localization, and Nav2</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>solbot4_gazebo_spawn</exec_depend>
  <exec_depend>solbot4_localization</exec_depend>
  <exec_depend>solbot4_nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
